# qjs-debugger

./: .vscodeignore  BUGS  CLAUDE.md  CMakeLists.txt  README.md  TODO  client.js  codec.js  connector-lws.js  connector-qjsnet.js  engine-connection.js  extension.js  package.json  qjs-debugger.js  server-adapter.js  session.js  transport.js  vscode-dap.js
examples/: orbit.js  test-qjsnet.js
gui/: PLAN.md  command-line.js  console-pane.js  file-picker.js  main.js  source-pane.js  stack-pane.js  theme.js  toolbar.js  vars-pane.js  watch-pane.js  widgets.js
imgui/: debugger-client.js  imgui-debugger.js  poc.js  source-view.js  target.js  transport.js  var-tree.js  wire-codec.js
